# rust-file-upload-project

./: Cargo.toml  README.md
cli-upload/: Cargo.toml
cli-upload/src/: argument.rs  command_line_upload.rs  main.rs
file-upload/: Cargo.toml  Dockerfile  README.md
file-upload/.github/workflows/: rust-format.yml
file-upload/src/: main.rs
multiple-file-upload/: Cargo.toml
multiple-file-upload/src/: main.rs  upload.rs
rust-file-compression/: Cargo.toml
rust-file-compression/src/: compress_parameters.rs  database.rs  file_compress.rs  main.rs
