[package]
name = "multiple-file-upload"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.183", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }